# PySME

./: .gitignore  .gitmodules  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  README.md  changelog.md  pyproject.toml
.github/workflows/: build-wheels.yml  python-app.yml
cmake/: platform.h.in
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/advance/: derived_param.md  faq.md  fordev.md  index.rst  line_filtering.md
docs/concepts/: abundance.md  atmosphere.md  data_files.md  fitparameters.md  fitresults.md  index.rst  lfs.md  nlte.md  sme_struct.md  system_info.md
docs/dev/: changelog.md  changes.rst  index.rst  old_docs.md
docs/fundamentals/: abund.md  continuum.md  flux_inten.md  index.rst  io.md  linelist.md  mask.md  rv.md  segment.md
docs/getting_started/: first_fit.md  first_spectrum.md  index.rst  installation.md  nlte.md
docs/reference/: api.rst  cli_or_scripts.rst  index.rst
docs/usage/: how-to.md  installation.md  quickstart.md  sme_struct.md
src/pysme/: __init__.py  abund.py  broadening.py  continuum_and_radial_velocity.py  persistence.py  sme.py  sme_synth.py  solve.py  synthesize.py  util.py
src/pysme/gui/: plot_plotly.py
src/pysme/linelist/: linelist.py  vald.py
src/pysme/smelib/: _smelib.cpp  libtools.py  sme_synth_faster.h
test/: test_atmospheres.py  test_largefilestorage.py  test_sme_structure.py  test_synthesis.py
